--- a/content/classes/01-background/01-oceanography/level-3/index.Rmd
+++ b/content/classes/01-background/01-oceanography/level-3/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Ocean Cross-sections'
+title: 'Extending ideas'
 author: Ben Harden
 date: '2021-05-05'
 level: 3
@@ -9,49 +9,77 @@ tags: []
 draft: no
 ---
 
-Now we're going to explore the different physical properties of the ocean across an entire basin - the North Atlantic. We're going to see how the ocean is not just a stack of waters of different densities, but that these densities actually drive movement in the ocean on a global scale.
+Now that you're comfortable with the main oceanographic concepts it's time to extend your thoughts in one of the areas.
 
-## Reading
+Based on your interest, you should select one of the following sections to explore in more detail. You should review the content and answer the questions. Then either come see me to discuss or submit your answers on Google Classroom.
 
-### Ocean Cross Sections
+## 1. Seasonal Temperature Profiles
 
-Up to this point, we've been looking at ocean profiles: these are one-time measurements often from a ship where we lower a device through the ocean to see the vertical distribution of, in our cases, temperature, salinity and density. If we then take the ship, move it a little, and take another profile we can begin to create a cross section. The following video shows that process for a line down the middle of the North Atlantic Ocean.
+The depth and properties of the mixed layer of the ocean does not stay the same throughout the year. The following image shows the development of the temperature profile between summer and winter for a science station in the North East Pacific Ocean (Station OWS Papa).
 
-<iframe title="vimeo-player" src="https://player.vimeo.com/video/548492851" width="800" height="450" frameborder="0" allowfullscreen></iframe>
+```{r, out.width="350px"}
+knitr::include_graphics("annual_cycle.jpg")
+```
 
-Interpreting sections is a little different to interpreting profiles. Depth is still on the y axis with the surface at the top and the deep ocean at the bottom. But now the x axis is distance along the line that the ship has traveled. The property measured (in the above case, temperature) is shown as colors. You may also 
+1. Write down the depth and temperature of the mixed layer for each profile shown. How would you simply describe to trends from August to April in these values?
 
-When we look at a cross-section, we almost always also have to show a map to allow people to know what part of the ocean we are slicing. 
+Two major factors influence the changes in the depth and temperature of the mixed layer:
 
-### Water masses and Thermohaline Circulation
+* A colder atmosphere will cool the surface layer. A warmer atmosphere will warm the surface layer.
+* Stronger winds will drive more stirring in the upper water. Less wind will tend to allow waters to become more stratified.
 
-Water masses are regions of water that share the same temperature and salinity properties. They are usually identified by their origin near the surface. For example, North Atlantic Deep Water is water that can be found thoughout much of the deep ocean with a temperature and salinity fingerprint of ~2°C and ~34.9 g/kg.
+As we move from the summer to the winter, the winds get progressively __stronger__ and __colder__.
 
-Thermohaline circulation is the large-scale motion of water around the planet driven by density differences between these water masses.
+2. Can you use this information to describe and explain the evolution of the mixed layer from Summer to Winter?
 
-The following is a video I made on a voyage up the East Coast of Greenland in 2013. It includes a basic thermohaline circulation experiment to demonstrate the basic ideas of how density can drive motion.
+Below 120 m there is little change in temperature between seasons. 
 
-<iframe title="vimeo-player" src="https://player.vimeo.com/video/46944329" width="800" height="450" frameborder="0" allowfullscreen></iframe>
+3. Why is this?
 
-This is all a bit of a simplification - for more detailed information, read [this introduction](https://www.e-education.psu.edu/earth103/node/847) to circulation in the North Atlantic.
+4. How do you expect the evolution of the mixed layer to impact other oceanographic properties such as surface nutrient availability and oxygen content?
 
-## Exercise
+## 2. Global Phytoplankton Growth
 
-Look at the following cross sections of the ocean from north-south down the Atlantic Ocean. Take some time to ensure you have a good handle on what the figures are showing on the x and y axes and the color scales. Look at the map to orient yourself - the left hand edge of the cross sections are the *southern* end of the line on the map.
+We've looked at some of the factors that influence phytoplankton growth: primarily their access to light and nutrients. We're now going to explore how that changes around the planet.
 
-<div class="full-width">
-![](woce_sections.png)
+The following is a brief explanation of some of the processes that impact phytoplankton growth around the world, primarily mid-latitude seasonality, upwelling/downwelling, and terrestrial sources.
+
+<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/557703782?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="scripting.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+Let's apply some of these idea to a global map of phytoplankton distribution. The following is an figure produced by a satellite that can map surface quantities of phytoplankton by measuring the color of the ocean. This particular map is an average of three years of measurements so averages through all seasons of the year.
+
+Green/yellow/red colors indicate more pythoplankton and blue/purple show less phytoplankton.
+
+<div class = "full-width">
+![](surface_phyto.jpg)
 </div>
 
-Think about the following questions which we will discuss in a Socratic Seminar in class:
+Think about and answer the following questions:
 
-* What features/water masses in these sections do you recognize from the readings and what are their core properties?
-* What feature do not fit with your understanding? In what ways do these sections show ways in which the readings are simplifications of the real ocean.
-* What other measurements would be useful to help fully grasp the picture of circulation in the North Atlantic?
+1. Where are phytoplankton found in large amounts? Where are there fewer?
 
-## Next Steps
+2. Which of the processes described above could explain the patterns you are seeing in different regions?
 
-Once you've completed your discussion, please click to "Level Complete" button below to reflect on your discussion.
+The following is a map of surface nitrate:
 
-Then please wait for feedback on your Socratic Seminar. Level 3 is scored. If you score 6 or more, you can move on to [Level 4](../level-4/) if you wish. If not, you can accept your score and move on to another topic or you can review the content and discussion you just had and submit a written response to the questions above.
+<div class = "full-width">
+![](surf-nitrate.png)
+</div>
 
+3. How well does the map of surface nitrate predict the amount of phytoplankton in the global map? What regions predict this poorly and why?
+
+## 3. More on the Carbon Pump
+
+The oceanic carbon pumps are not quite as simple as we've been discussing so far. Along with the standard biological pump where detritus falls to the depths by gravity, there are a few nuanced additions to the way the ocean moves carbon from the surface to the deep ocean.
+
+This is nicely summarized in the following article:
+
+[Multi-faceted particle pumps drive carbon sequestration in the ocean](s41586-019-1098-2.pdf) by Philip W. Boyd, Hervé Claustre, Marina Levy, David A. Siegel & Thomas Weber 
+
+Read the paper above and think about the following questions:
+
+1. What tools have scientists traditionally used to measure the biological pump?
+
+2. What additional pumps exist in the ocean? 
+
+3. How important a role might they play in the overall amount of carbon that reaches the deep ocean?
