--- a/content/classes/01-background/02-lit-review/level-2/annotated.Rmd
+++ b/content/classes/01-background/02-lit-review/level-2/annotated.Rmd
@@ -1,23 +1,18 @@
 ---
-title: "Annotated Bibliography"
-author: Ben Harden
-date: '2022-05-05'
-level: 2
-slug: []
-categories: []
-tags: []
-draft: no
+title: "Example Biblography"
+output: 
+  pdf_document
 ---
 
 We should have a pretty good idea now how to read a paper and some general insight into how and where to find additional ones.
 
 Your goal now is to build an annotated bibliography for your research project that helps you understand what is known and see opportunities where you can contribute to scientific understanding.
 
-An annotated bibliography is a list of well formatted references to specific papers with a few of sentences after each that describe what the paper showed and what relevance it has to your project. An example can be seen [here](). Keeping track of what your reading and what it teaches you is an essential skill of a research scientist. There is even software that can help you keepo track of things digitally (e.g. [Zotero](https://www.zotero.org/)).
+An annotated bibliography is a list of well formatted references to specific papers with a few of sentences after each that describe what the paper showed and what relevance it has to your project. An example can be seen [here](). Keeping track of what your reading and what it teaches you is an essential skill of a research scientist. There is even software that can help you keepo track of things digitally (e.g. [Zotero](https://www.zotero.org/))
 
 In the above example, each paper is referenced in a similar format. You may come across a number of different formats in your searches or in your previous experiences: each field/journal does things slightly different. For the sake of this project, we're going to use the format used by the [American Geophysical Union](https://www.agu.org/Publish-with-AGU/Publish/Author-Resources/Grammar-Style-Guide#referenceformat):
 
-Quoting from their site, the format is:
+Quoting from their site, the format it:
 
 Author, A. A., Author, B. B., & Author, C. C. (year). Title of article. *Title of periodical, xx(x)*, pp-pp. https://doi.org/xx.xxxx/xxxxxxxx
 
@@ -36,12 +31,12 @@ Wang, C. (2005). A modeling study of the response of tropical deep convection to
 
 ## Exercise
 
-You can collaborate on this work in your research topic teams and share resources, but you will need to submit your own work including finding some (but not all) unique papers.
+You can complete this work in your research topic teams and share resource, but you will need to submit your own work including finding some (but not all) unique papers.
 
 You need to use your searching and reading skills to:
 
 * Write a goal sentence - what are you wanting to find out from your papers?
-* Find 4-5 papers that help you reach that goal in the region of interest. At least two should be unique from your peers.
+* Find 4-6 papers that help you reach that goal in the region of interest. At least two should be unique from your peers.
 * Read the as much of the papers as you need to reach your stated goal
 * Create a list of properly formatted references to the papers
 * Write 2 or 3 sentences after each describing what the paper shows and how it is useful to your project
