--- a/content/classes/01-background/02-lit-review/level-1/index.Rmd
+++ b/content/classes/01-background/02-lit-review/level-1/index.Rmd
@@ -49,7 +49,7 @@ If you would like to practice these skills then I'm including a paper here: ["On
 
 Your goal here is pretty tangible: You have just embarked on a research cruise to [Rhode Island Sound](https://en.wikipedia.org/wiki/Rhode_Island_Sound) in June. We are going to use this paper as a tool to contextualize the environment we sampled.
 
-Start with the abstract and introduction to give yourself a feel for what the paper is about and what context it fits into. Review the rest of the paper and answer the following as best you can. I've posted example answers to Google Classroom for you to compare to yours if you like:
+Start with the abstract and introduction to give yourself a feel for what the paper is about and what context it fits into. Review the rest of the paper and answer the following as best you can. I've posted [example answers](https://classroom.google.com/c/NDg3ODE3MzU4NzEw/m/NTMyNzIwNTAwMzY0/details) to Google Classroom for you to compare to yours if you like:
 
 1. What do we learn in this paper about the kinds of oceanic conditions we might expect to find in this region in June?
 
