--- a/content/classes/01-background/01-oceanography/level-3/index.Rmd
+++ b/content/classes/01-background/01-oceanography/level-3/index.Rmd
@@ -7,6 +7,7 @@ slug: []
 categories: []
 tags: []
 draft: no
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NDg3ODE4MzQyMTcx/details
 ---
 
 Now that you're comfortable with the main oceanographic concepts it's time to extend your thoughts in one of the areas.
