update with R work

--- a/content/classes/02-data-report/_index.Rmd
+++ b/content/classes/02-data-report/_index.Rmd
@@ -1,5 +1,9 @@
 ---
 title: "Data Report"
 weight: 2
-draft: true
+draft: false
 ---
+
+Your research team will begin visualizing data and testing hypotheses about your topic area. You will then summarize your findings in a short data report that combines figures and text.
+
+Follow the skills paths below to achieve this goal.
