--- a/content/classes/01-background/_index.Rmd
+++ b/content/classes/01-background/_index.Rmd
@@ -2,3 +2,11 @@
 title: "Background Presentations"
 weight: 1
 ---
+
+Your research team will deliver a brief introductory presentation about your topic area in the region of interest (Rhode Island Sound). Everyone should contribute to the presentation and each team member should speak for 2-3 mins. In your presentation, you could cover:
+
+* Key scientific and regional background information
+* What is known and not known about your topic
+* What question(s) you will be seeking to answer
+
+Follow the skills paths below to prepare for this presentation
