--- a/content/classes/02-data-report/01-intro-to-R/level-1/index.Rmd
+++ b/content/classes/02-data-report/01-intro-to-R/level-1/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "General Concepts"
+title: "Intro to coding and R"
 author: Ben Harden
 date: '2021-05-05'
 level: 1
@@ -9,102 +9,101 @@ tags: []
 draft: no
 ---
 
-There's a lot to cover here, much of which we will (or have already) touched on during our research cruise. On this level you'll find a bunch of readings and other resources to review or expand your understanding. Easch section is an overview of some high-level concepts and each has a "test your understanding" quiz - this is not graded, but for you to use to check you've internalized some of the key ideas. 
+For our data exploration and visualization work, we are going to use a programming language called R. R is a very popular tool for working with data in sciences and is a one-stop-shop for work from data input and organization, to graphics and web presentations. In fact this whole website was build within R. There is a lot to it and it can feel overwhelming at first so hold tight if you've never done any of this kind of work before.
 
-A good starting place is some overview reading about our ocean planet as a whole.
+## What is R and why use it?
 
-From [Segar](https://www.reefimages.com/oceansci.php):
+R is a programming language. That means it's a piece of computer software that can interpret written commands and execute them in sequence to do a specific task such as, in our case, read in data and create a figure. There are many many programming languages out there, most with a specific goal in mind. HTML, which makes websites, is one example. You may have heard of others (or may be using them in your upcoming projects) such as python, MATLAB, java, fortran...
 
-* [Chapter 1](https://www.reefimages.com/oceans/SegarOcean4Chap01.pdf):
-    + Introduction (pg. 1-2)
-    + The Oceans and Earth's Environment (pg. 2-6). These sections provide a good overview and motivation for studying the ocean.
+The main contrast to using something like R is to use Excel. I'm assuming most of you have used this to look at data. Excel is a very visual way to work with data and make plots, and is pretty easy to learn, but this usability comes at a price:
 
-## Temperature, Salinity and Density
+* In Excel, the interface is point-and-click meaning you select data using your mouse and then select actions from a toolbar. This can be really easy to learn, but is limited because it's hard to record what you have done to your data or indeed do exactly the same thing again another time. R allows you to write scripts which automates this process and makes it reproducible
 
-Some of the most basic properties of the ocean are it's temperature (how hot/cold it is), Salinity (how salty it is), and density (how buoyant it is). As we will see, temperature and salinity dictate the density of the ocean and it's the density that is a large driver or inhibitor of ocean movement.
+* In Excel, you work on a sheet and manipulate the data directly. This can result in you accidentally removing data, editing it without being able to undo, or otherwise create a mess wherein the original data becomes a new version with no documentation or ability for someone else to reproduce what you've done. 
 
-Read the following from [Segar](https://www.reefimages.com/oceansci.php):
+* Excel is also not free so we limit our ability to collaborate and interact with the world by keeping the analysis behind a paywall. This has changed a little with the advent of Google Sheets, but the compatibility is still not perfect.
 
-- [Critical Concepts](https://www.reefimages.com/oceans/SegarOcean4CritCon.pdf) 1 and 6. These cover the key ideas that relate temperature and salinity (and pressure) to density
-- [Chapter 7](https://www.reefimages.com/oceans/SegarOcean4Chap07.pdf): 
-    + Water and Heat Budgets (pg. 147-149)
-    + Climate and Ocean Surface Water Properties (pg. 154-157). These sections covers the input and removal of heat and water from the ocean.
+Dr. Rob Schlegel (from the Woods Hole Oceanographic Institution) sums up nicely why using R is a good idea for data science as part of his R workshop.
 
-Check out this video about the impact of salinity on density and how that creates stratification. We will run this experiment in class if time allows.
+Please read [section 1.3 of this guide](https://robwschlegel.github.io/Intro_R_Workshop/prelim.html#why-use-r).
 
-<iframe src="https://player.vimeo.com/video/424923752" width="800" height="450" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+## Setting up R
 
+Most people couple the language R with a user interface called RStudio - this is a point-and-click program that takes the simplicity and user-friendly nature of those features to make the coding part easier.
 
-<div class ="exit-button">
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLScbaOrdSnSR3mU-Q4lGwFecDTEtmUW4C0tmAf8AlVhes3ehFw/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class = "w3-button w3-blue">Test your understanding</a>
-</div>
+For this class we are going to need to download both R (the language) and RStudio (the user interface) to our computers.
 
-## Phytoplankton, Nutrients and Light
+### Installing R
 
-Phytoplankton are the base of many food webs in the ocean. They are single-celled plant-like organisms that typically get their energy from sunlight. They exists throughout the world's oceans, primarily in the upper sunlit portion, but there are many factors that affect their abundance and geographic distribution.
+* Go to http://www.r-project.org/, and in the "Getting Started" box, click on “download R.” Find a site of your choice. (The ones at Berkeley and UCLA are closest to us, but you can use any of them.) 
+* Click to go to that site.
+* Click on your operating system (Windows, MAC, Linux) and follow directions.
+* *If Windows, click on "base" and then on Download R 4.2.0 for Windows. (Note that 3.4.1 is the current version as this is being written, but use whatever shows up as current.) You may need to save the file "R-3.4.1-win.exe" and then click on it to execute it. When the dialog box opens, click "RUN." A Setup Wizard should appear. Keep clicking "Next" (or change features if you understand them), until it is finished. You should now see an icon on your desktop, with a large capital “R.”*
 
-Watch this accessible intro to phytoplankton
+### Installing R Studio
 
-<iframe width="800" height="450" src="https://www.youtube.com/embed/fS422O4SLc4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-Read the following from [Segar](https://www.reefimages.com/oceansci.php):
-
-* [Chapter 12](https://www.reefimages.com/oceans/SegarOcean4Chap12.pdf): only pg 287 - 298: these sections cover the basics of life in the ocean before going on to talk about primary production and the sources of light and nutrients for phytoplankton growth.
+Go to http://www.rstudio.com, click on “Download RStudio” and follow the directions for your operating system.
 
 
-<div class ="exit-button">
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfohDaF3pTkC3f7o9_HENCpAoE3EImP2eHiy9XNvBiVpBMvSQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class = "w3-button w3-blue">Test your understanding</a>
-</div>
+## R Familiarization
 
-## Oxygen and Carbon
+Now that we know a little about R and why we might want to use it, it's time to learn some of the basics. If you've never used R or RStudio before it's worth a little bit of orientation.
 
-The ocean contains many elements, compounds and gases. Studying these and their interactions is the domain of chemical oceanography. This is clearly a very diverse field, but here, we will just touch on the basics of oxygen and carbon in the ocean. We wil look at both how they get into the ocean and then how they are moved from the surface to the deeper ocean by biology.
+You can get some basics on how to use R from [this tutorial](https://rstudio.cloud/learn/primers/1.2). Watch the videos and run the interactive code chunks to learn some of the basics.
 
-Read the following from [Segar](https://www.reefimages.com/oceansci.php):
+Then watch this video to orient yourself to the RStudio Interface
 
-- [Chapter 5](https://www.reefimages.com/oceans/SegarOcean4Chap05.pdf): 
-  * The Dissolving Power of Water (pg. 94-95)
-  * Sources and Sinks of Chemicals Dissolved in Seawater (pg. 95-96)
-  * Salinity (pg. 96-97)
-  * Dissolved Chemicals in Seawater (pg. 97-101)
+<iframe width="100%" height = "500" src="https://www.youtube.com/embed/cnQ-v1UUWyE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-And a video describing how gases dissolve in water
+### Scripting
 
-<iframe width="800" height="450" src="https://www.youtube.com/embed/tkQGHTdLkd4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+The final part of the video above talks about scripting. I like to think of scripts as a little like recipes. You lay out the ingredients and logical steps someone (or future you!) would need to follow in order to get a particular, reproducible outcome. In this case, it's R that is going to follow your script to do a particular analysis or make a plot.
 
-Read [The Ocean: A Carbon Pump](ocean-carbon-pump_ScientificItems_BD-2.pdf) which talks about the various ways in which carbon dioxide gets from the surface to the deep ocean including through the photosynthesis of [phytoplankton](https://en.wikipedia.org/wiki/Phytoplankton).
+Writing commands in the console is a little like cooking on the fly with whatever you have to hand. Sometimes that's the right way to make a meal (or play with data). Most times though, you're going to want to make a script to record what you've done.
 
-Watch this short video about the Biological Pump
+Below is a quick video intro to making a script.
 
-<iframe width="800" height="450" src="https://www.youtube.com/embed/U03MUHFuO2o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe title="vimeo-player" src="https://player.vimeo.com/video/557632079" width="800" height="600" frameborder="0" allowfullscreen></iframe>
 
+## RStudio Projects and Packages
 
-<div class ="exit-button">
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLScNYK1Z1z6Er8-JnDXei18rKYyvMFXnx6QTbFNoy1ZKTBxIQw/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class = "w3-button w3-blue">Test your understanding</a>
-</div>
+Finally some notes on Project and Packages
 
-## Plankton
+### Projects
 
-Plankton are the community of drifters in the ocean. We've already met phytoplankton who produce their energy through photosynthesis, but now we'll add zooplankton who primarily get their energy from consuming other plants and animals. The diversity of plankton is extremely large so we wont try and cover everything or everyone, but instead familiarize ourselves with some basic types and processes.
+When using RStudio it's useful to organize your work in an RStudio Projects. A Project creates a folder where you can store all your data, code and figures in one place. It is more organized and actually makes some of the coding easier, especially reading in data. 
 
-* [Chapter 12](https://www.reefimages.com/oceans/SegarOcean4Chap12.pdf): pgs 305 - 314: The section on Plankton covers many basic catergories and processes. 
+To open a new project, go to "File" and then "New Project". When the popup window appears select "New Directory" and then "New Project". You'll then be asked to choose the name of your project and where the project should exist on your computer. 
 
-Check out the following two videos that give a broad overview to the types of plankton in our ocean.
+Once you've done that you're project will be set up and will automatically load in R.
 
-<iframe width="800" height="450"  src="https://www.youtube.com/embed/xFQ_fO2D7f0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+### Packages
 
-<iframe width="800" height="450"  src="https://www.youtube.com/embed/ziGtmjiUlJQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Many pieces of code that you will want to run will rely on packages. Packages in R are a selection of add-on functions - code that has been written by an R user that they think would be helpful enough to others that they have "packaged" it up and made it available.
 
-One important process in the world's oceans is Diel Vertical Migration (DVM), where the motile plankton community travel upwards in the water column at night to feed before sinking to deeper waters during the day to hide from predators. 
+For this class we just need one package called "tidyverse" (technically a package or a few different packages), which contains some popular functions that help users work with and plot data. Tidyverse does not come pre-installed in R so you will need to do this.
 
-Here is a graphic that nicely displays that process as day turns to night
+Open RStudio and enter the following in the console:
 
- <iframe width="800" height="450" frameborder="0" src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Animation_of_diel_migration.gif"></iframe> 
- 
- 
-<div class ="exit-button">
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOoPBBUouRlpXiHDy9e9YKih7RO4GM3hpo8A7A__tEAYck-Q/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class = "w3-button w3-blue">Test your understanding</a>
-</div>
- 
- 
- 
+```{r, eval = F}
+install.packages("tidyverse")
+```
+
+A bunch of red text will show up for a while as R downloads and installs the packages, but once you're done with this you shouldn't have to run this command again.
+
+## Test your understanding
+
+To test your understanding, you should use what you've heard above to do the following:
+
+1. Create a new project
+1. Open a new script file and save it with the name "test_script.R and s"
+1. Use this script to record the steps you would take to do the following:
+
+  * Make a new object which is a vector of the numbers 1, 3, 5, 8, 11, 20
+  * Extract the 3rd value in this vector
+  * Find the mean and range of this vector
+  * Make a new object which is your original object multiplied by 10
+
+Dont forget to comment your lines of code so you know what each line does
+
+Once you're done, you can check your work against [this example script](Viz_L1_example.R)
