--- a/content/classes/02-data-report/01-intro-to-R/level-2/index.Rmd
+++ b/content/classes/02-data-report/01-intro-to-R/level-2/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Real-world application'
+title: 'Plotting in R'
 author: Ben Harden
 date: '2021-05-05'
 level: 2
@@ -7,156 +7,149 @@ slug: []
 categories: []
 tags: []
 draft: no
-quiz: https://classroom.google.com/c/MzM4MTMyMTU4Mjgy/a/MzQ5ODM0MjEzODcx/details
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
-library(tidyverse)
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ```
 
-Now that we're familiar with some of the basic properties of the ocean, we're going to move on to apply these ideas to some real world data and applications. At any point, you should feel empowered to visit (or revisit) the [level 1](../level-1/) page to review the background concepts.
-    
-Each topic has some real data and an exercise to complete. I can sign you off on the level in two ways: If you would like to write your answers, you can upload your responses to the Google Classroom for me to review. Alternatively, you can give me a verbal report once you feel confident on the topics. As with all levels, you will have a chance to review feedback and submit again. 
+In Level 2 we're going to look at how to read in data and make some basic plots.
 
-Once a good number of you have worked on these ideas, I will also be going over these activities explicitly in class.
-    
-## Temperature, Salinity and Density
+### Reading Data
 
-We saw maps of the surface distribution of temperature and salinity in the Segar reading. That reading also discussed why the patterns are the way they are. Below are comparable figures from the World Ocean Circulation Experiment (WOCE) for your reference.
+If you've used Excel before, you'll be pretty familiar with the spreadsheet layout of data where we have rows and columns. Many datasets you'll be working with in R are also organized in the same way. R calls them data frames.
 
-![](woce_surf_temp.png)
+![Values are stored at intersection of rows (obserations) and columns (variables)](tidy_1.png)
 
-![](woce_surf_sal.png)
-The following image shows five vertical profiles of temperature, salinity and density from around the world. These were all taken from a ship using a CTD at locations shown on the map below. I have labeled all the profiles as letters and shown you all the positions as numbers, but I haven't matched them up.
+Watch this brief intro to importing data into a data frame in R, and how it differs from using data in Excel.
 
-```{r profiles}
-df <- read_csv("profiles.csv")
+<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/555320284?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Sequence 01.mov"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-varlabs <- c(theta = "Temperature (°C)",
-             sal = "Salinity",
-             sigma = "Density (kg/m3)")
+## Plotting Data
 
-gather(df, key, value, theta, sal, sigma) %>%
-  ggplot(aes(value, z)) +
-  geom_path(aes(color = Cruise)) +
-  facet_wrap(~factor(key, c("theta", "sal", "sigma")), 
-             nrow = 1, scales = "free_x", 
-             strip.position="bottom",
-             labeller = as_labeller(varlabs)) +
-  scale_y_reverse() +
-  coord_cartesian(ylim = c(500,0), expand = TRUE) +
-  scale_color_discrete(labels = c("A","B","C","D","E")) +
-  labs(x = NULL,
-       y = "Depth (m)",
-       color = "Station") +
-  theme_bw() +
-  theme(strip.background = element_blank(),
-        strip.placement = "outside")
+The tool we are going to be using is the ggplot package. It's a powerful and flexible way to make graphics and it used widely by scientists analyzing data.
+
+You should also go through [this primer](https://rstudio.cloud/learn/primers/1.1) on visualization in R using ggplot. It includes interactive code chunks for you to try out the ideas as you go.
+
+## A Walk-through
+
+We're now going to apply your ggplot intro skills to a real ocean data set. Specifically, we're going to look at some ocean CTD profiles as this kind of data is going to be relevent to many of your projects.
+
+We are going to be using data from a single CTD profile, You can download the data here: [SR04.csv](SR04.csv).
+
+### Activating packages
+
+So far, we've come across two packages: readr (the package we used to read in our csv file) and ggplot (to make plots). We are going to need both for this exercise because we are now going to be both reading and plotting data. Both come in the tidyverse package, but you need to activate them at the top of your script.
+
+So make sure your script starts with the following:
+
+```{r libraries}
+library(readr)
+library(ggplot2)
 ```
 
-```{r profile_map}
-xrange <- c(100,360)
-xbr <- seq(0,360,30)
-xlabs <- ifelse(xbr>180, paste0(360-xbr, "°W"), paste0(xbr,"°E"))
+### Reading in Data
 
-yrange <- c(-90,90)
-ybr <- pretty(yrange)
-ylabs <- ifelse(ybr>0, paste0(ybr, "°N"), paste0(abs(ybr), "°S"))
-
-group_by(df, Cruise) %>% 
-  summarize(lon = mean(lon), lat = mean(lat)) %>%
-  ggplot(aes(ifelse(lon<0,lon+360,lon), lat)) +
-  geom_polygon(aes(long, lat, group = group), data = map_data("world2"), fill = "grey50") +
-  geom_point() +
-  geom_label(aes(label = c(2,4,5,1,3)), nudge_x = 10) +
-  coord_quickmap(xlim = xrange, ylim = yrange, expand = FALSE) +
-  scale_x_continuous(breaks = xbr, labels = xlabs) +
-  scale_y_continuous(breaks = ybr, labels = ylabs) +
-  labs(x = NULL, y = NULL) +
-  theme_bw()
-
-```
-
-* Q1: Use the WOCE surface temperature and salinity maps (above) to match the profiles up to their locations based on the surface temperature and salinity in the profiles.
-
-* Q2: Which profile/regions have the strongest and weakest pycnoclines? Why? 
-
-* Q3: What consequences do you think this has for the vertical motion of water in these locations?
-
-
-## Phytoplankton, Nutrients, and Light.
-
-The following are profiles of ocean properties in the open ocean somewhere in the South Pacific. From left we have Light availability, Density, Fluoroesence (a measure of the amount of chlorophyll-a in the water and is commonly used as a proxy for how much phytoplankton is around) and Dissolved Oxygen.
+The data should be placed in your project folder so that it is easy for the code to find. We will then read in the data using the `read_csv()` function.
 
 ```{r}
-
-vars <- c(par = "Light Availabilty (V)",
-          sigtheta = "Density (kg/m3)",
-          fluor = "Fluoresence (V)",
-          oxygen = "Oxygen") 
-          
-
-read_csv("S285-044.csv") %>%
-  filter(!is.na(dep) & dep <350) %>%
-  pivot_longer(c(par, fluor,sigtheta, oxygen)) %>%
-  ggplot(aes(value, dep)) +
-  geom_path() +
-  geom_hline(yintercept = 0, color = "grey50") +
-  facet_wrap(~factor(name, names(vars)), 
-             nrow = 1, scales = "free_x",
-             strip.position = "bottom", 
-             labeller = as_labeller(vars)) +
-  scale_y_reverse(breaks = seq(0,400,50)) +
-  coord_cartesian(ylim = c(300,0)) +
-  labs(x = NULL, y = "Depth (m)") +
-  theme_minimal() +
-  theme(strip.background = element_blank(),
-        strip.placement = "outside",
-        strip.text = element_text(size = 10),
-        axis.line =  element_line(size = .2),
-        panel.grid.major = element_line(color = "grey50", size = .2),
-        panel.spacing = unit(1, "cm"))
+profile <- read_csv("SR04.csv")
 ```
 
-Q4: Look first at the light curve: where is there the most light and at what depth is there essentially no light in the ocean.
+The object `profile` is now a data frame containing the data in `SR04.csv`. It should be available to you in the environment panel where you can click on it to see it in spreadsheet format.
 
-Q5: Look at the density plot: How deep is the mixed layer?
+Some things to note about the data from a quick-look:
 
-Q6: Assuming there are no available nutrients in the mixed-layer and that nutrient availability increases below the pycnocline, explain why most phytoplankton (fluoroesence) are found around 100 m in the ocean.
+* The data is already tidy - each row is an observation and each column is a variable.
 
-Q7: Use the above answers and what you know about the processes by which oxygen enters the ocean to explain the shape of the oxygen curve. Where are values high/low and why is that?
+* The rows are observations at particular depths (z)
 
-## Zooplankton
+* The columns have relatively self-explanatory headings, but we always need the metadata that tells us what each is specifically. In our case:
+    + Cruise: Unique identifier for the cruise (oceanographic expedition) on which the data was gathered - there are five different cruises in this data
+    + Station: Unique station number (i.e. ID of location where the ship stopped to take the measurements)
+    + lon: Longitude (decimal degrees east)
+    + lat: Latitude (decimal degrees north)
+    + z: Depth (m)
+    + pres: Pressure (dbar)
+    + temp: Temperature (°C)
+    + sal: Salinity
+    + theta: Potential Temperature (°C) - the temperature the water would be if it was raised to the surface. This accounts for the slight cooling effect of increased pressure
+    + sigma: Potential Density (kgm^-^3)  
 
-The following is some cruise data collected to the east of the Carribean. Each point represents a location where a surface net was towed from the research vessel. The amount of zooplankton collected in the net is represented by the size of the circle and the color indicates whether the sample was collected during the day or at night.
+### Plotting
+
+Recall from what you've already seen that we create a simple ggplot using the following template:
+
+```{r template, eval=FALSE}
+ggplot(data = <DATA>) + 
+  <GEOM_FUNCTION>(mapping = aes(<MAPPINGS>))
+```
+
+Where we will need to specify three things:
+
+1. `<DATA>` The data frame used to make the plot
+1. `<MAPPINGS>` The mapping of variables to aesthetics - what variable you want to put on thew x axis, y axis, color axis, etc.
+1. '<GEOM_FUNCTION>' A geom to represent these aesthetics - how will this look? (points? lines?)
+
+So, as a first example, we can plot the temperature data over depth in the following way:
 
 ```{r}
-df <- read_csv("C282_neuston.csv") %>%
-  mutate(daynight = ifelse(lubridate::hour(dttm_in) > 6 & lubridate::hour(dttm_in) < 18, "day", "night")) %>%
-  filter(lon > -57)
-
-ybreaks <- seq(10,20,2)
-ylabels <- paste0(abs(ybreaks), "°N")
-
-xbreaks <- seq(-66,-54,2)
-xlabels <- paste0(abs(xbreaks), "°W")
-
-
-ggplot(df, aes(lon,lat)) +
-  geom_point(aes(size = biodens*1000, color = daynight)) +
-  geom_polygon(aes(long, lat, group = group), data = map_data("world")) +
-  coord_quickmap(xlim = c(-65,-55), ylim = c(10,20)) +
-  labs(x= NULL, y = NULL,
-       color = NULL,
-       size = "Zooplankton (µl/m2)") +
-  scale_y_continuous(breaks = ybreaks, labels = ylabels) +
-  scale_x_continuous(breaks = xbreaks, labels = xlabels) +
-  theme_bw()
-
+ggplot(data = profile) +
+  geom_line(aes(x = z, y = temp))
 ```
-Q8: In general, were more zooplankton collected during the day or during the night? What could explain that pattern?
 
-Q9: Does the pattern hold true in all regions? If not, why might this be?
+Where we have specified that:
 
+1. Our data is contained in the data frame, `profile`
+1. We want to map depth (z) to position along the x axis and temperature (temp) to position along the y axis
+1. We want the representation to be a line `geom_line()`
+
+*ASIDE: This is the most verbose way I can write this. Verbose in coding means more explicit or using-lots-of-typing. I have used `data = profiles`, `x = dttm` and `y = temp`. As with many functions in R, both `ggplot()` and `aes()` are expecting certain inputs and instead of officially declaring them, you can just write them in the right order. The above code could be written more succinctly as:*
+
+
+```{r, eval = FALSE, include = TRUE}
+ggplot(profile) +
+  geom_line(aes(z, temp))
+```
+
+*We've lost something in the ability for us to directly interpret what is being assigned to what, but we're saving our fingers in the long run. It's up to you which makes more sense to you at this point.*
+
+The above figure is what you would plot from a traditional science perspective - the independent variable (z) is on the x axis and the dependent variable (temperature) is on the y axis. However, from an oceanography perspective, it makes more sense to have depth be on the y axis and temperature on the x axis. Like this (flipping the positon of z and temp):
+
+```{r}
+ggplot(profile) +
+  geom_line(aes(temp, z))
+```
+
+Uh oh. What a mess. What's happening here? ggplot actually has two geoms that can draw lines. We've been using `geom_line()` so far, but underneath the hood, this function actually sorts the y variable along the x axis. This can be useful in many cases were data is not sorted already, but in our case it means that the nice sweeping curve gets deconstructed. For our purposes, we're going to want to use `geom_path()` which joins the data up in the order they appear in the data set.
+
+```{r}
+ggplot(profile) +
+  geom_path(aes(temp, z))
+```
+
+The last thing we're going to do to fit with oceanographic norms is to flip the y axis. This will make depth be greater the further you go down the plot.
+
+Doing this in ggplot requires us to use one of the `scale_*` functions. These functions basically say: *Take the mapping we've already set up in out ggplot and adjust how the data is mapped*. This includes telling ggplot what range of values to map to our x axis, whether we want a log axis, what colors to map our data to, and, in our case, what direction to plot the data in. We'll talk more about the `scale_*` functions in Level 3 if you are interested.
+
+```{r}
+ggplot(profile) +
+  geom_path(aes(temp, z)) +
+  scale_y_reverse()
+```
+
+So now we have an intuitive way to look at the data. The temperature is around -1.8°C at the surface (top) and increases to a maximum of 2°C at around 300 m before slowly cooling again as you head deeper.
+
+I've zipped a [project file here](Viz_L2_example.zip) that contains the data and the code you would need to run the above visualization. Unzip the folder and double-click on the Viz_L2_example.Rproj file to open this project in RStudio. 
+
+## Exercise
+
+Working together as a group, our goal is to help each of you able to read in data from our cruise and make some basic plots to analyze. The above tools and walk-through gives you a good starting point, but there are probably many diverging goals and we will have to work some things out as we go.
+
+To get signed off at Level 2, you will need to be able to show me an RStudio project that contains the data and a script that:
+
+* Activates the appropriate libraries
+* Loads in at least one of the cruise datasets
+* Makes at least one plot with relevant axes and an appropriate geoms
+* Has comments that describe what each section of code is doing
 
