--- a/content/classes/02-data-report/01-intro-to-R/level-3/index.Rmd
+++ b/content/classes/02-data-report/01-intro-to-R/level-3/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Extending ideas'
+title: 'More Plotting Tools'
 author: Ben Harden
 date: '2021-05-05'
 level: 3
@@ -9,77 +9,137 @@ tags: []
 draft: no
 ---
 
-Now that you're comfortable with the main oceanographic concepts it's time to extend your thoughts in one of the areas.
-
-Based on your interest, you should select one of the following sections to explore in more detail. You should review the content and answer the questions. Then either come see me to discuss or submit your answers on Google Classroom.
-
-## 1. Seasonal Temperature Profiles
-
-The depth and properties of the mixed layer of the ocean does not stay the same throughout the year. The following image shows the development of the temperature profile between summer and winter for a science station in the North East Pacific Ocean (Station OWS Papa).
-
-```{r, out.width="350px"}
-knitr::include_graphics("annual_cycle.jpg")
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ```
 
-1. Write down the depth and temperature of the mixed layer for each profile shown. How would you simply describe to trends from August to April in these values?
 
-Two major factors influence the changes in the depth and temperature of the mixed layer:
+This is a chance for you to extend your skills from the simple x-y plotting we saw in level 2.
 
-* A colder atmosphere will cool the surface layer. A warmer atmosphere will warm the surface layer.
-* Stronger winds will drive more stirring in the upper water. Less wind will tend to allow waters to become more stratified.
+The [ggplot cheatsheet](https://nyu-cdsc.github.io/learningr/assets/data-visualization-2.1.pdf) is a helpful document to have nearby. It lays out the geoms available to you and has some examples. It also helpfully groups the geoms into their use given the type of data. For example, a scatter plot made with `geom_point` is in the two-variables, x continuous, y continuous section. This means, we have two variables to plot against one another and both axes are numeric and can take any value.
 
-As we move from the summer to the winter, the winds get progressively __stronger__ and __colder__.
+To give you a flavor of some other geoms, you should work your way through the [primers](https://rstudio.cloud/learn/primers/3) for:
 
-2. Can you use this information to describe and explain the evolution of the mixed layer from Summer to Winter?
+* [Bar Charts](https://rstudio.cloud/learn/primers/3.2)
+* [Histograms](https://rstudio.cloud/learn/primers/3.3)
+* [Box Plots and Counts](https://rstudio.cloud/learn/primers/3.4)
 
-Below 120 m there is little change in temperature between seasons. 
+## Exercise
 
-3. Why is this?
+You goal in this level is to create multiple plots, experiment with geoms, and add complexity using other aesthetics like color and shape. You should create a new project to experiment in and share your results with me so I can provide feedback and give you an opportunity to revise. Your plotting goals should be guided by your project interests - we can chat if you need input on ideas of what to plot.
 
-4. How do you expect the evolution of the mixed layer to impact other oceanographic properties such as surface nutrient availability and oxygen content?
+## Some ideas
 
-## 2. Global Phytoplankton Growth
+I'm going to go through a few examples of things you could experiment with in creating these plots:
 
-We've looked at some of the factors that influence phytoplankton growth: primarily their access to light and nutrients. We're now going to explore how that changes around the planet.
+### Set up 
 
-The following is a brief explanation of some of the processes that impact phytoplankton growth around the world, primarily mid-latitude seasonality, upwelling/downwelling, and terrestrial sources.
+As always, start with activating the packages you're going to need. As a shorthand now I'm just going to load the tidyverse which loads all the contained packages.
 
-<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/557703782?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="scripting.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+```{r}
+library(tidyverse)
+```
 
-Let's apply some of these idea to a global map of phytoplankton distribution. The following is an figure produced by a satellite that can map surface quantities of phytoplankton by measuring the color of the ocean. This particular map is an average of three years of measurements so averages through all seasons of the year.
+### Loading data
 
-Green/yellow/red colors indicate more pythoplankton and blue/purple show less phytoplankton.
+I'm going to use a dataset that has multiple CTD profiles in it. You can get this data here: [profiles.csv](profiles.csv).
 
-<div class = "full-width">
-![](surface_phyto.jpg)
-</div>
+First, I'll read in the data:
 
-Think about and answer the following questions:
+```{r}
+profiles <- read_csv("profiles.csv")
+```
 
-1. Where are phytoplankton found in large amounts? Where are there fewer?
+Again, this data will be added to our environment and we can click on it to see the details of the data. If you scroll down, you can see that there are now 5 distinct profiles in this data set with columns the same as in [Level 2](../level-2/):
 
-2. Which of the processes described above could explain the patterns you are seeing in different regions?
+* Cruise: Unique identifier for the cruise (oceanographic expedition) on which the data was gathered - there are five different cruises in this data
+* Station: Unique station number (i.e. ID of location where the ship stopped to take the measurements)
+* lon: Longitude (decimal degrees east)
+* lat: Latitude (decimal degrees north)
+* z: Depth (m)
+* pres: Pressure (dbar)
+* temp: Temperature (°C)
+* sal: Salinity
+* theta: Potential Temperature (°C) - the temperature the water would be if it was raised to the surface. This accounts for the slight cooling effect of increased pressure
+* sigma: Potential Density (kgm^-^3)  
 
-The following is a map of surface nitrate:
+### Grouping data
 
-<div class = "full-width">
-![](surf-nitrate.png)
-</div>
+This is going to be about plotting multiple similar data on the same plot. To demonstrate this, we can make a similar plot to that which we did in [Level 2](../level-2/), plotting temperature against depth, but this time including all five profiles
 
-3. How well does the map of surface nitrate predict the amount of phytoplankton in the global map? What regions predict this poorly and why?
+```{r}
+ggplot(profiles) +
+  geom_path(aes(temp, z)) +
+  scale_y_reverse()
+```
 
-## 3. More on the Carbon Pump
+You can probably see now that there are 5 profiles, but ggplot has tried to join all the ends up to each other to make a continuous data plot. Pretty ugly.
 
-The oceanic carbon pumps are not quite as simple as we've been discussing so far. Along with the standard biological pump where detritus falls to the depths by gravity, there are a few nuanced additions to the way the ocean moves carbon from the surface to the deep ocean.
+We can get around this in a number of ways. For example, we could use points:
 
-This is nicely summarized in the following article:
+```{r}
+ggplot(profiles) +
+  geom_point(aes(temp, z)) +
+  scale_y_reverse()
+```
 
-[Multi-faceted particle pumps drive carbon sequestration in the ocean](s41586-019-1098-2.pdf) by Philip W. Boyd, Hervé Claustre, Marina Levy, David A. Siegel & Thomas Weber 
+But it would be nice to have profiles be more distinct than this. A better solution might be to map the cruise or station name to another aesthetic.
 
-Read the paper above and think about the following questions:
+One we can try is the "group" aseethetic which just tells ggplot to treat the whole data set as a bunch of smaller data sets depending on the value of, in our case, Cruise:
 
-1. What tools have scientists traditionally used to measure the biological pump?
+```{r}
+ggplot(profiles) +
+  geom_path(aes(temp, z, group = Cruise)) +
+  scale_y_reverse()
+```
 
-2. What additional pumps exist in the ocean? 
+Now you can see that each profile is distinct and easy to distinguish from the others. However, an even smarter move might be to make each of them different colors by using the "color" aesthetic.
 
-3. How important a role might they play in the overall amount of carbon that reaches the deep ocean?
+```{r}
+ggplot(profiles) +
+  geom_path(aes(temp, z, color = Cruise)) +
+  scale_y_reverse()
+```
+
+And look at that! ggplot has even created a handy legend for us so we can tell which is which.
+
+### Adding additional variables
+
+In some cases, you might want to add color in a way that adds a new parameter into the plot. Perhaps if I wanted to plot temperature against depth, but now have the points of the profile be colored according to salinity. I might use the same technique as above, but with different results:
+
+```{r}
+ggplot(profiles) +
+  geom_point(aes(temp, z, color = sal)) +
+  scale_y_reverse()
+```
+
+Its not a great plot, but one thing that I want to note here is that because salinity is a numeric variable, ggplot has mapped it to a color gradient in the legend rather than as discrete colors as it did when we mapped Cruise to color. 
+
+## Other geoms
+
+Some geoms you can work with include creating histograms to look at spread in data. In the example below, I've made a stacked histogram.
+
+```{r}
+ggplot(profiles) +
+  geom_histogram(aes(temp, fill = Cruise), binwidth = 2) 
+```
+But you can also put the bars next to each other using:
+
+```{r}
+ggplot(profiles) +
+  geom_histogram(aes(temp, fill = Cruise),
+                 position = "dodge", binwidth = 2) 
+```
+As you saw in the primers above, we can also look at statistical spread of data in boxplots:
+
+```{r}
+ggplot(profiles) +
+  geom_boxplot(aes(Cruise, temp)) 
+```
+And we can always experiment with scatter plots of data plotting one variable against another, potentially with another variable as color too or a discrete value as shape. Or both:
+
+```{r}
+ggplot(profiles) +
+  geom_point(aes(sal,temp, color = sigma, shape = Cruise)) 
+```
+
