--- a/content/classes/02-data-report/03-report/level-1/index.Rmd
+++ b/content/classes/02-data-report/03-report/level-1/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Effective Science Presentations"
+title: "What is a Data Report?"
 author: Ben Harden
 date: '2021-05-05'
 level: 1
@@ -7,42 +7,10 @@ slug: []
 categories: []
 tags: []
 draft: no
-quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTMyMjIzMzAzMjk1/details
 ---
 
-You've probably already given a number of presentations in your educational careers so far. Now it's time to hone some of these skills ahead of giving a talk about your class project background and, later, about your summer research. 
+For research teams to work on shared research questions successfully, they must find a way to effectively share their ongoing analysis with each other. This often takes the form of data reports or update presentations. Every research team I have worked with did them regularly. They often take the form of brief internal presentations that should provoke discussion and open up analysis for wider review. They are also key for sharing questions/roadblocks with your teams so that you might get input and assistance. They also serve as the basis from which group decisions about research direction and publication possibilities can be made.
 
-Remember throughout, much of what we are doing in this topic will only come from practice. You'll have a chance to do this a number of times and each one is a chance to experiment, get feedback, and build your tool kits.
+For our purposes, I want you to use the data report tool to help organize your results, share them internally with your team (and with me), and work together to test your hyptotheses and further analyse your results.
 
-## Class Project presentation
-
-Your class project background presentation will be a group presentation of no longer than 2-3 minutes per group member and no longer than 7 mins in total. You should plan on discussing the following, not necessarily in this order in your presentation:
-
-* Key scientific and regional background information
-* What is known and not known about your topic
-* What question(s) you will be seeking to answer
-* What you research plan is for answering those questions
-
-You audience if your peers, but assume little previous experience with oceanography or cruise data.
-
-## Scientific Presentation Overview
-
-For Level 1, let's focus on some general skills. The following are some articles to read that give you some pointers on giving strong science presentations. Remember when reading these that much of this is just opinion - there are as many pieces of advice out there as there are people who've given presentations. Although there are studies that support certain things below, there is also just a lot of info out there about best practice and you might hear something that doesn't resonate with you. The best thing though, is practice itself. And learning from your mistakes.
-
-* <https://www.theonlinescientist.com/write-presentation-5-simple-steps/?>
-* <https://colinpurrington.com/tips/science-talks/>
-* <https://www.theonlinescientist.com/5-simple-tricks-improve-slides/>
-* <https://www.nature.com/articles/d41586-018-07780-5>
-
-## Level 1 Practice
-
-If you're new to these kinds of presentations that you'll find a basic template presentation in Google Classroom. There are four slides right now for you to fill in. Use the information you've gather from both your background oceanography levels and your annotated bibliography to bullet out some key points on the following ideas:
-
-* Key background information about your topic area
-* Important regional context - what kinds of processes are important to your topic area in the region of interest
-* What data you are using - you should have a good idea of this from sampling on board
-* What questions you are hoping to answer - can be very broad or specific
-
-The is also a space on each slide to include a suitable picture, map or other image that helps contextualize your words. Use these slides as a first step to organizing your ideas - I am happy to have a look at what you've done and offer some feedback, but for the most part this is a personal tool to get you going in organizing your understanding. You can work on this as a team if you feel you could all benefit from it or individually if you just want some time to organize ideas by yourself.
-
-Remember, if this is all still new to you then you can use your group class presentation as a learning experience and stepping stone towards delivering a Level 2 presentation for your summer research.
+We'll have time to chat a little about this in class and then in Level 2 we will talk about the particulars of what you document should look like.
