--- a/content/classes/02-data-report/03-report/level-2/index.Rmd
+++ b/content/classes/02-data-report/03-report/level-2/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Making a Better Presentation'
+title: 'Initial Data Report'
 author: Ben Harden
 date: '2021-05-05'
 level: 2
@@ -7,37 +7,36 @@ slug: []
 categories: []
 tags: []
 draft: no
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTM0OTU4MTc3NDcz/details
 ---
 
-You goal in Level 2 to is to deliver a solid research introduction presentation that organizes ideas from broad context to specific regional details and builds towards clear questions that you are hoping to answer. Again, your class project presentation is a group effort with each presenter taking 2-3 mins for a maximum of 7 mins. Your talk should cover the following:
+Our project data report will be a living document much like an edited lab notebook that serves to show me what you as a team have found and what you think it means. To be successful at this level I want you to use this tool to organize your results, make it clear to me that you understand what they show you, and work towards results that you want to present in your research poster.
 
-* Key scientific and regional background information
-* What is known and not known about your topic
-* What question(s) you will be seeking to answer
-* What you research plan is for answering those questions
+This document does need to be organized, but it does not need to be well-formatted or contain full sentences or beautiful figures. It is a function internal document, not a publishable external product. 
 
-## Level 2 Expectations
+## Exercise
 
-If you're at Level 2, you already know how to make a slide deck with some bullets under a header with one image per slide. You'd also be pretty comfortable presenting from this slide deck, covering each bullet in turn. What we'd like to do here is to really create a focused presentation that moves from broad context to specific details and ends with a really clear and logical motivation and series of questions for your research.
+You should set up a shared Google Doc for your data report. Share this on the Google Classroom assignment below (but don't submit it) so I can have access to it too and check your work whenever you need me to. Only one person per team needs to do this.
 
-For a Level 2 presentation, I'm expecting to see:
+You are free to organize your document as makes most sense to you, but some things I want to see are:
 
-* A well thought-out progression from big ideas to specific details. Don't forget to cover all the Ws: What, where, when, why. For example, if my topic were extreme wind events in New England I'd probably want to make sure I cover:
-  + What an extreme wind event is
-  + How they form and how frequent they are
-  + Where they typically strike in New England
-  * What region we are going to look at specifically
-  + How we are going to measure them
-  + What questions we are going to try and answer
-  
-* A clear statement early in the presentation about why we should care about the topic. How does it impact people or a broader ecosystem?
+* Figures that show your results (from R)
+* Clear descriptions of each figure (can be in bullets)
+* Analysis and interpretation of your results (also in bullets)
+* Clear indication of what hypotheses you are testing (or indeed creating) through your analysis
 
-* Fewer words on each slide - possibly just bullet-point words not statements
+There is no set format for this, but one suggestion I have would be to organize your document around some of your hypotheses. I've created a [rough example Data Report](https://classroom.google.com/c/NDg3ODE3MzU4NzEw/m/NTM0OTU2MDc0NDkw/details) for you to check out just to give you a sense of how I might organize things,. but it's really up to you and what you think is most useful.
 
-* Clear and relevant images - remember, slides should be a *visual aid*. This means they should support the words you are saying and not distract from them
+You should:
 
-* Presentation from a cue card or memory
+* Describe what your figures show accurately
+* Highlight key features that you can explain (or not!)
+* Add questions and TODOs to make sure your document records both what you do and don't know and can lead to assistance within teams 
+* Refer to previous work from you lit review as relevant
+* Add images if this is helpful
+* Use comments to discuss with your team
+* Record intentions for next steps
+* List any research questions that come to mind that might motivate future work.
 
-* A reference slide at the end listing your bibliography
+Finally - your last section of the document should be a clear list of what you feel are the main results that you will want to present in your poster. Again, this is a working list and is subject to change.
 
-* You can use a template slide deck
